--- a/README.html
+++ b/README.html
@@ -1814,6 +1814,18 @@ Scheduled reminders can be canceled from this tab.
 </div>
 <div class="title">Figure 23. Alert preview example</div>
 </div>
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<div class="title">💡</div>
+</td>
+<td class="content">
+Use the search bar to search for the text of an alert, the username of the user the alert is about, or the username of the user the alert is being sent to, and more. See the <a href="#searching">Searching</a> section for more information.
+</td>
+</tr>
+</table>
+</div>
 </div>
 <div class="sect2">
 <h3 id="logging"><a class="link" href="#logging">Logging</a></h3>
@@ -1975,7 +1987,7 @@ including the '|' symbol has the side effect of making the search a Regular Expr
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-08-07 15:41:59 -0400
+Last updated 2023-08-07 15:45:18 -0400
 </div>
 </div>
 </body>
