--- a/README.html
+++ b/README.html
@@ -1924,7 +1924,7 @@ dropdown and click "Save".</p>
 <p>English (default)</p>
 </li>
 <li>
-<p>lang/Arabic (عربي)</p>
+<p>Arabic (عربي)</p>
 </li>
 <li>
 <p>Bangla (বাংলা)</p>
@@ -1994,7 +1994,7 @@ in parentheses. For example, if you want to translate the module into Japanese, 
 </li>
 <li>
 <p>Open the file you just created in a text editor and translate the text on the right side of the equal sign for each
-line. For example, if you wanted to translate the text <code>User Rights</code> into Japanese, you would change the line
+line. For example, if you wanted to translate the text <code>Introduction</code> into Japanese, you would change the line
 <code>status_ui_3 = "Introduction"</code> to <code>status_ui_3 = "序章"</code>.</p>
 </li>
 <li>
@@ -2134,7 +2134,7 @@ including the '|' symbol has the side effect of making the search a Regular Expr
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-08-09 14:59:53 -0400
+Last updated 2023-08-09 15:04:06 -0400
 </div>
 </div>
 </body>
