--- a/README.html
+++ b/README.html
@@ -555,7 +555,7 @@ code {
 <li><a href="#logging">Logging</a></li>
 </ul>
 </li>
-<li><a href="#translation">Translation (i18n and l10n)</a>
+<li><a href="#translation">Translation (i18n / l10n)</a>
 <ul class="sectlevel2">
 <li><a href="#_general_information">General Information</a></li>
 <li><a href="#_available_translations">Available Translations</a></li>
@@ -1897,7 +1897,7 @@ project&#8217;s own logs for all changes to user rights, including</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="translation"><a class="link" href="#translation">Translation (i18n and l10n)</a></h2>
+<h2 id="translation"><a class="link" href="#translation">Translation (i18n / l10n)</a></h2>
 <div class="sectionbody">
 <div class="sect2">
 <h3 id="_general_information"><a class="link" href="#_general_information">General Information</a></h3>
@@ -1911,6 +1911,19 @@ dropdown and click "Save".</p>
 <p>You can override the system-wide language at the project level by visiting the Project Module Manager and clicking the
 "Configure" button for the module. Then select the language you want to use from the "Language" dropdown and click
 "Save".</p>
+</div>
+<div class="admonitionblock important">
+<table>
+<tr>
+<td class="icon">
+<div class="title">🚩</div>
+</td>
+<td class="content">
+There are parts of the module that are not translated by the module itself, but instead rely on REDCap&#8217;s
+built-in language translation system. These include the names of the user rights and associated descriptions.
+</td>
+</tr>
+</table>
 </div>
 </div>
 <div class="sect2">
@@ -2134,7 +2147,7 @@ including the '|' symbol has the side effect of making the search a Regular Expr
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-08-09 15:04:06 -0400
+Last updated 2023-08-09 15:20:17 -0400
 </div>
 </div>
 </body>
