--- a/README.html
+++ b/README.html
@@ -2625,7 +2625,8 @@
                             <li>
                                 <p><em><strong>What is it?</strong></em></p>
                                 <p>This is an External Module that allows REDCap administrators to create and manage
-                                    <strong>Security Access Groups</strong> in a REDCap system.</p>
+                                    <strong>Security Access Groups</strong> in a REDCap system.
+                                </p>
                             </li>
                             <li>
                                 <p><em><strong>What are Security Access Groups?</strong></em></p>
@@ -3218,7 +3219,8 @@
                                                     </li>
                                                     <li>
                                                         <p><code>2</code> - <em>No access</em>, <em>Read only</em>, and
-                                                            <em>View &amp; Edit</em> are allowed</p>
+                                                            <em>View &amp; Edit</em> are allowed
+                                                        </p>
                                                     </li>
                                                     <li>
                                                         <p><code>3</code> - All data viewing rights settings are allowed
@@ -3245,7 +3247,8 @@
                                                     </li>
                                                     <li>
                                                         <p><code>1</code> - <em>No access</em> and
-                                                            <em>De-Identified</em> are allowed</p>
+                                                            <em>De-Identified</em> are allowed
+                                                        </p>
                                                     </li>
                                                     <li>
                                                         <p><code>2</code> - <em>No access</em>, <em>De-Identified</em>,
@@ -4719,7 +4722,8 @@
                                     href="https://docs.github.com/en/get-started/quickstart/fork-a-repo">fork</a> the
                                 <code>main</code> branch of the module&#8217;s <a
                                     href="https://github.com/AndrewPoppe/Security-Access-Groups">Github repository</a>.
-                                Next, follow these steps:</p>
+                                Next, follow these steps:
+                            </p>
                         </div>
                         <div class="olist arabic">
                             <ol class="arabic">
@@ -4853,7 +4857,8 @@
                                     class="notranslate">"alice"</span> or <span class="notranslate">"bob"</span>, you
                                 can type <span class="notranslate">"alice | bob"</span> in the search box and the table
                                 will be filtered to only show users with <span class="notranslate">"alice"</span> or
-                                <span class="notranslate">"bob"</span> in any column.</p>
+                                <span class="notranslate">"bob"</span> in any column.
+                            </p>
                         </div>
                         <div class="admonitionblock tip">
                             <table>
