--- a/README.html
+++ b/README.html
@@ -13,6 +13,7 @@
     <title>Security Access Groups</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic%7CNoto+Serif:400,400italic,700,700italic%7CDroid+Sans+Mono:400,700">
+    <script src="https://kit.fontawesome.com/015226af80.js" crossorigin="anonymous"></script>
     <style>
         /*! Asciidoctor default stylesheet | MIT License | https://asciidoctor.org */
         /* Uncomment the following line when using as a custom stylesheet */
@@ -2457,7 +2458,7 @@
 
 <body class="article">
     <div id="header">
-        <h1>Security Access Groups</h1>
+        <h1><i class="fa-solid fa-users-between-lines"></i> Security Access Groups</h1>
         <div class="details">
             <span id="author" class="author">Andrew Poppe</span><br>
             <span id="email" class="email"><a href="mailto:andrew.poppe@yale.edu">andrew.poppe@yale.edu</a></span><br>
