--- a/README.html
+++ b/README.html
@@ -13,7 +13,6 @@
     <title>Security Access Groups</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic%7CNoto+Serif:400,400italic,700,700italic%7CDroid+Sans+Mono:400,700">
-    <script src="https://kit.fontawesome.com/015226af80.js" crossorigin="anonymous"></script>
     <style>
         /*! Asciidoctor default stylesheet | MIT License | https://asciidoctor.org */
         /* Uncomment the following line when using as a custom stylesheet */
@@ -2458,7 +2457,7 @@
 
 <body class="article">
     <div id="header">
-        <h1><i class="fa-solid fa-users-between-lines"></i> Security Access Groups</h1>
+        <h1>Security Access Groups</h1>
         <div class="details">
             <span id="author" class="author">Andrew Poppe</span><br>
             <span id="email" class="email"><a href="mailto:andrew.poppe@yale.edu">andrew.poppe@yale.edu</a></span><br>
@@ -2551,6 +2550,10 @@
                                 href="https://sonarcloud.io/summary/new_code?id=AndrewPoppe_Security-Access-Groups"><img
                                     src="https://sonarcloud.io/api/project_badges/measure?project=AndrewPoppe_Security-Access-Groups&amp;metric=alert_status"
                                     alt="measure?project=AndrewPoppe Security Access Groups&amp;metric=alert status"></a></span>
+                        <span class="image"><a class="image"
+                                href="https://app.codacy.com/gh/AndrewPoppe/Security-Access-Groups/dashboard?utm_source=gh&amp;utm_medium=referral&amp;utm_content=&amp;utm_campaign=Badge_grade"><img
+                                    src="https://app.codacy.com/project/badge/Grade/bbb20fafcae24d7684eb66cf7eb034e9"
+                                    alt="bbb20fafcae24d7684eb66cf7eb034e9"></a></span>
                     </p>
                 </div>
                 <p><label for="lang_selector">Select Language</label>
@@ -2626,8 +2629,7 @@
                             <li>
                                 <p><em><strong>What is it?</strong></em></p>
                                 <p>This is an External Module that allows REDCap administrators to create and manage
-                                    <strong>Security Access Groups</strong> in a REDCap system.
-                                </p>
+                                    <strong>Security Access Groups</strong> in a REDCap system.</p>
                             </li>
                             <li>
                                 <p><em><strong>What are Security Access Groups?</strong></em></p>
@@ -3220,8 +3222,7 @@
                                                     </li>
                                                     <li>
                                                         <p><code>2</code> - <em>No access</em>, <em>Read only</em>, and
-                                                            <em>View &amp; Edit</em> are allowed
-                                                        </p>
+                                                            <em>View &amp; Edit</em> are allowed</p>
                                                     </li>
                                                     <li>
                                                         <p><code>3</code> - All data viewing rights settings are allowed
@@ -3248,8 +3249,7 @@
                                                     </li>
                                                     <li>
                                                         <p><code>1</code> - <em>No access</em> and
-                                                            <em>De-Identified</em> are allowed
-                                                        </p>
+                                                            <em>De-Identified</em> are allowed</p>
                                                     </li>
                                                     <li>
                                                         <p><code>2</code> - <em>No access</em>, <em>De-Identified</em>,
@@ -4723,8 +4723,7 @@
                                     href="https://docs.github.com/en/get-started/quickstart/fork-a-repo">fork</a> the
                                 <code>main</code> branch of the module&#8217;s <a
                                     href="https://github.com/AndrewPoppe/Security-Access-Groups">Github repository</a>.
-                                Next, follow these steps:
-                            </p>
+                                Next, follow these steps:</p>
                         </div>
                         <div class="olist arabic">
                             <ol class="arabic">
@@ -4858,8 +4857,7 @@
                                     class="notranslate">"alice"</span> or <span class="notranslate">"bob"</span>, you
                                 can type <span class="notranslate">"alice | bob"</span> in the search box and the table
                                 will be filtered to only show users with <span class="notranslate">"alice"</span> or
-                                <span class="notranslate">"bob"</span> in any column.
-                            </p>
+                                <span class="notranslate">"bob"</span> in any column.</p>
                         </div>
                         <div class="admonitionblock tip">
                             <table>
@@ -4931,7 +4929,7 @@
     </div>
     <div id="footer">
         <div id="footer-text">
-            Last updated 2023-08-14 12:48:03 -0400
+            Last updated 2023-08-15 10:53:30 -0400
         </div>
     </div>
 </body>
