--- a/README.html
+++ b/README.html
@@ -2554,6 +2554,10 @@
                                 href="https://app.codacy.com/gh/AndrewPoppe/Security-Access-Groups/dashboard?utm_source=gh&amp;utm_medium=referral&amp;utm_content=&amp;utm_campaign=Badge_grade"><img
                                     src="https://app.codacy.com/project/badge/Grade/bbb20fafcae24d7684eb66cf7eb034e9"
                                     alt="bbb20fafcae24d7684eb66cf7eb034e9"></a></span>
+                        <span class="image"><a class="image"
+                                href="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/codeql.yml"><img
+                                    src="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/codeql.yml/badge.svg"
+                                    alt="badge"></a></span>
                     </p>
                 </div>
                 <p><label for="lang_selector">Select Language</label>
@@ -4929,7 +4933,7 @@
     </div>
     <div id="footer">
         <div id="footer-text">
-            Last updated 2023-08-15 10:53:30 -0400
+            Last updated 2023-08-15 11:49:03 -0400
         </div>
     </div>
 </body>
