--- a/README.html
+++ b/README.html
@@ -528,7 +528,8 @@ code {
 <div class="paragraph">
 <p><span class="image"><a class="image" href="https://sonarcloud.io/summary/new_code?id=AndrewPoppe_Security-Access-Groups"><img src="https://sonarcloud.io/api/project_badges/measure?project=AndrewPoppe_Security-Access-Groups&amp;metric=alert_status" alt="measure?project=AndrewPoppe Security Access Groups&amp;metric=alert status"></a></span>
 <span class="image"><a class="image" href="https://app.codacy.com/gh/AndrewPoppe/Security-Access-Groups/dashboard?utm_source=gh&amp;utm_medium=referral&amp;utm_content=&amp;utm_campaign=Badge_grade"><img src="https://app.codacy.com/project/badge/Grade/bbb20fafcae24d7684eb66cf7eb034e9" alt="bbb20fafcae24d7684eb66cf7eb034e9"></a></span>
-<span class="image"><a class="image" href="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/codeql.yml"><img src="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/codeql.yml/badge.svg" alt="badge"></a></span></p>
+<span class="image"><a class="image" href="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/codeql.yml"><img src="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/codeql.yml/badge.svg" alt="badge"></a></span>
+<span class="image"><a class="image" href="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright.yml"><img src="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright.yml/badge.svg" alt="badge"></a></span></p>
 </div>
 <p><label for="lang_selector">Select Language</label>
     <select id="lang_selector" onchange="window.location.href = this.value;">
@@ -2166,7 +2167,7 @@ including the '|' symbol has the side effect of making the search a Regular Expr
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-08-17 16:00:48 -0400
+Last updated 2023-08-29 09:48:04 -0400
 </div>
 </div>
 </body>
