--- a/README.html
+++ b/README.html
@@ -4940,13 +4940,39 @@
         <div class="sect1">
             <h2 id="_changelog"><a class="link" href="#_changelog">Changelog</a></h2>
             <div class="sectionbody">
-
+                <table class="tableblock frame-all grid-all stripes-even stretch">
+                    <colgroup>
+                        <col style="width: 14.2857%;">
+                        <col style="width: 28.5714%;">
+                        <col style="width: 57.1429%;">
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th class="tableblock halign-left valign-top">Version</th>
+                            <th class="tableblock halign-left valign-top">Release Date</th>
+                            <th class="tableblock halign-left valign-top">Description of changes</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="tableblock halign-left valign-top">
+                                <p class="tableblock">1.0.0</p>
+                            </td>
+                            <td class="tableblock halign-left valign-top">
+                                <p class="tableblock">2023-08-30</p>
+                            </td>
+                            <td class="tableblock halign-left valign-top">
+                                <p class="tableblock">* Initial release</p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
     <div id="footer">
         <div id="footer-text">
-            Last updated 2023-08-29 11:34:35 -0400
+            Last updated 2023-08-30 14:18:56 -0400
         </div>
     </div>
 </body>
