--- a/README.html
+++ b/README.html
@@ -2455,7 +2455,7 @@
     </style>
 </head>
 
-<body class="article">
+<body class="article toc2 toc-left">
     <div id="header">
         <h1>Security Access Groups</h1>
         <div class="details">
@@ -2585,7 +2585,7 @@
                         <option value="README_UR.html">Urdu <span class="notranslate">(اردو)</span></option>
                     </select>
                 </p>
-                <div id="toc" class="toc">
+                <div id="toc" class="toc2">
                     <div id="toctitle" class="title">Table of Contents</div>
                     <ul class="sectlevel1">
                         <li><a href="#_introduction">Introduction</a>
@@ -4972,7 +4972,7 @@
     </div>
     <div id="footer">
         <div id="footer-text">
-            Last updated 2023-08-30 14:18:56 -0400
+            Last updated 2023-09-01 08:39:33 -0400
         </div>
     </div>
 </body>
